# zero2prod

./: .env  Cargo.toml
.github/workflows/: audit.yml  general.yml  scheduled.yml
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
